@@ -11,8 +11,10 @@ import android.widget.Button;
 import android.widget.TextView;
 
 import com.example.tixtox.HomeActivity;
+import com.example.tixtox.Model.Membership;
 import com.example.tixtox.R;
 import com.google.firebase.auth.FirebaseAuth;
+import com.google.firebase.auth.FirebaseUser;
 import com.google.firebase.database.DataSnapshot;
 import com.google.firebase.database.DatabaseError;
 import com.google.firebase.database.DatabaseReference;
@@ -21,14 +23,20 @@ import com.google.firebase.database.ValueEventListener;
 
 import org.w3c.dom.Text;
 
+import java.util.Map;
+
 public class activity_bill extends AppCompatActivity {
     TextView txtTaiKhoan,txtMagd,txtGiaghedon,txtGiaghedoi,txtSoghedon,txtSogheDoi,txtTongTien,txtNgayGD,txtGiamGia;
     Button btnVeXemPhim, btnManHinhChinh;
     DatabaseReference dtb;
+    int gia;
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_bill);
+
+        FirebaseAuth firebaseAuth = FirebaseAuth.getInstance();
+        FirebaseUser firebaseUser;
         dtb = FirebaseDatabase.getInstance().getReference();
         txtNgayGD = (TextView) findViewById(R.id.txtThoiGianThanhToan_bill);
         txtGiaghedoi=(TextView) findViewById(R.id.txtGiagheDoi_bill);
@@ -41,11 +49,14 @@ public class activity_bill extends AppCompatActivity {
         btnVeXemPhim = (Button) findViewById(R.id.btn_VeXemPhim_bill);
         btnManHinhChinh = (Button)  findViewById(R.id.btn_ManHinh_bill);
         txtGiamGia = (TextView) findViewById(R.id.txtGiamGia_bill);
+        gia = 70000;
+        firebaseUser = firebaseAuth.getCurrentUser();
         Intent intent = getIntent();
         String Mave = intent.getStringExtra("Key");
         String MaHoaDon = intent.getStringExtra("MaHoaDon");
         //String hinhanh = intent.getStringExtra("Phim_Hinh_Anh");
         Load(MaHoaDon);
+
         btnVeXemPhim.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
@@ -67,8 +78,6 @@ public class activity_bill extends AppCompatActivity {
     }
 
     private void Load(String MaHoaDon) {
-
-
         dtb.child("HoaDon").child(MaHoaDon).addValueEventListener(new ValueEventListener() {
             @Override
             public void onDataChange(@NonNull DataSnapshot snapshot) {
@@ -78,12 +87,13 @@ public class activity_bill extends AppCompatActivity {
                 txtSogheDoi.setText(soghedoi.toString());
                 txtSoghedon.setText(soghedon.toString());
                 txtMagd.setText(MaHoaDon);
+                gia = Integer.valueOf(bill.getGia());
                 txtTongTien.setText(bill.getThanhTien());
                 txtTaiKhoan.setText( FirebaseAuth.getInstance()
                         .getCurrentUser().getDisplayName());
-                txtGiaghedoi.setText((new Integer(soghedoi*140000).toString()));
-                txtGiaghedon.setText((new Integer(soghedon*70000).toString()));
-                txtGiamGia.setText(new Integer( soghedoi*140000 +  soghedon*70000 - Integer.valueOf(bill.getThanhTien())).toString() );
+                txtGiaghedoi.setText((new Integer(soghedoi*gia*2).toString()));
+                txtGiaghedon.setText((new Integer(soghedon*gia).toString()));
+                txtGiamGia.setText(new Integer( soghedoi*gia*2 +  soghedon*gia - Integer.valueOf(bill.getThanhTien())).toString() );
                 txtNgayGD.setText(DateFormat.format("dd-MM-yyyy (HH:mm:ss)",
                         bill.getTime()));
 
